<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tw_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_nom" />

        <EditText
            android:id="@+id/et_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/saisi_nom" />

        <TextView
            android:id="@+id/tw_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_prenom" />

        <EditText
            android:id="@+id/et_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/saisi_prenom" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/button1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/button2" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>