<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:alignmentMode="alignBounds"
        android:columnCount="2"
        android:useDefaultMargins="false">

        <Button
            android:id="@+id/ag_b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/ag_button1">
        </Button>

        <Button
            android:id="@+id/ag_b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/ag_button2">
        </Button>

        <Button
            android:id="@+id/ag_b3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/ag_button3">
        </Button>

        <Button
            android:id="@+id/ag_b4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/ag_button4">
        </Button>
    </GridLayout>
</RelativeLayout>